--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "modal-hooks",
+  "name": "@use-modals",
   "version": "1.0.0",
   "description": "an eaist way to open/close modals and pass props to modals, or register an dynmaic modal and you can use these modals globally, support React, Vue, Vue3",
   "keywords": [
