--- a/examples/vue3/.yalc/@use-modals/vue3/package.json
+++ b/examples/vue3/.yalc/@use-modals/vue3/package.json
@@ -2,9 +2,6 @@
   "name": "@use-modals/vue3",
   "version": "1.0.0",
   "type": "module",
-  "publishConfig": {
-    "access": "public"
-  },
   "scripts": {
     "dev": "vite build --watch",
     "build": "vite build",
@@ -24,12 +21,5 @@
   "dependencies": {
     "vue": "^3.2.47"
   },
-  "devDependencies": {
-    "@types/node": "^18.14.0",
-    "@vitejs/plugin-vue": "^4.1.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2",
-    "vite-plugin-dts": "^2.3.0",
-    "vue-tsc": "^1.4.2"
-  }
+  "yalcSig": "1ee804967b36e7101c1c85c1daef304e"
 }
