--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -2,6 +2,9 @@
   "name": "@use-modals/vue",
   "version": "1.0.0",
   "type": "module",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
