--- a/examples/vue3/package.json
+++ b/examples/vue3/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@use-modals/vue3": "file:.yalc/@use-modals/vue3",
+    "@use-modals/vue3": "^1.0.0",
     "ant-design-vue": "^3.2.20",
     "vue": "^3.2.47"
   },
