--- a/examples/react/.yalc/@usemodals/react/package.json
+++ b/examples/react/.yalc/@usemodals/react/package.json
@@ -40,13 +40,5 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "devDependencies": {
-    "@types/node": "^18.14.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^4.0.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2",
-    "vite-plugin-dts": "^2.3.0"
-  }
+  "yalcSig": "15ab997bfc6dd576e415eee19ec6d92f"
 }
