--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "@use-modals/vue",
-  "version": "1.0.1",
+  "name": "@usemodals/vue",
+  "version": "1.0.0",
   "type": "module",
   "publishConfig": {
     "access": "public"
   },
+  "keywords": [
+    "modal",
+    "vue modal",
+    "open modal",
+    "close modal",
+    "update modal",
+    "close all modals"
+  ],
   "repository": {
     "url": "https://github.com/rwson/use-modal",
     "type": "git"
